# WordCloudProject

./: CMakeLists.txt  README.md  WordCloudGenerator.cpp  WordCloudGenerator.h  build_mingw.bat  main.cpp  text.txt
tests/: test_wordcloud.cpp
